--- a/main.html
+++ b/main.html
@@ -5,16 +5,25 @@
     <title>Title</title>
     <link href="data/main.css" rel="stylesheet">
     <link href="data/common.css" rel="stylesheet">
+    <script src="data/main.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" type="module"></script>
+
 </head>
 <body>
     <div class="header">
         <div class="nav">
-            <a href="">MAIN</a>
-            <a href="">TEST</a>
+            <div>
+                <img src="/img/navLogo.png" alt="logo">
+            </div>
+            <div>
+                <a href="">MAIN</a>
+                <a href="">TEST</a>
+            </div>
+
         </div>
     </div>
     <div class="content">
-
+        <canvas id="waterCanvas"></canvas>
     </div>
 </body>
 </html>
