--- a/main.html
+++ b/main.html
@@ -5,11 +5,13 @@
     <title>Title</title>
     <link href="data/main.css" rel="stylesheet">
     <link href="data/common.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="data/main.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" type="module"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" type="module"></script>
 </head>
 <body>
+
     <div class="header">
         <div class="nav">
             <div>
@@ -22,8 +24,35 @@
 
         </div>
     </div>
-    <div class="content">
-        <canvas id="waterCanvas"></canvas>
+
+    <div class="container">
+        <h1 class="bigText textAlign">
+            TITRE
+        </h1>
+        <div class="section-caracteristique">
+            <div>
+                <img src="/img/qsd.jpg">
+            </div>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et metus id dui lacinia maximus. Etiam non ligula non dolor laoreet mollis. Pellentesque ac lobortis est, vel efficitur eros. Donec urna justo, maximus eu nibh eget, condimentum gravida dui. Morbi rutrum nunc sit amet dignissim ullamcorper. Maecenas consectetur feugiat turpis, et rutrum ex ultrices eu. Sed blandit nibh non magna facilisis, at lacinia mauris lacinia. Vestibulum varius ex bibendum, ultricies augue non, blandit mauris. Donec ut velit et risus gravida sagittis. Etiam vestibulum leo sit amet venenatis faucibus. Donec tincidunt magna tellus, ac aliquam risus pellentesque ac. In ultricies lacus quis enim maximus malesuada. Nam aliquam diam felis, feugiat sollicitudin nunc laoreet a.
+                    Pellentesque quis dui id odio scelerisque rutrum et ac velit. Proin vulputate nec est vel posuere. Morbi sed porta arcu, nec egestas sapien. Aliquam mollis ligula enim, at dignissim urna elementum non. Nunc facilisis convallis lacus, a feugiat quam porta vitae. Maecenas imperdiet aliquam sapien volutpat mattis. Pellentesque facilisis tempor justo eu malesuada. Nullam et sapien neque. Fusce sit amet felis ac augue mattis rhoncus. Proin est lacus, iaculis ut ipsum sed, tempor viverra odio. Vivamus quis fermentum felis. Vivamus sed arcu ullamcorper, vehicula est sodales, lacinia massa. Cras nec arcu sit amet nisi ornare rhoncus non in leo.
+                </p>
+            </div>
+        </div>
+
+        <div class="section-caracteristique flexRowReverse">
+            <div>
+                <img src="/img/qsd.jpg">
+            </div>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et metus id dui lacinia maximus. Etiam non ligula non dolor laoreet mollis. Pellentesque ac lobortis est, vel efficitur eros. Donec urna justo, maximus eu nibh eget, condimentum gravida dui. Morbi rutrum nunc sit amet dignissim ullamcorper. Maecenas consectetur feugiat turpis, et rutrum ex ultrices eu. Sed blandit nibh non magna facilisis, at lacinia mauris lacinia. Vestibulum varius ex bibendum, ultricies augue non, blandit mauris. Donec ut velit et risus gravida sagittis. Etiam vestibulum leo sit amet venenatis faucibus. Donec tincidunt magna tellus, ac aliquam risus pellentesque ac. In ultricies lacus quis enim maximus malesuada. Nam aliquam diam felis, feugiat sollicitudin nunc laoreet a.
+                    Pellentesque quis dui id odio scelerisque rutrum et ac velit. Proin vulputate nec est vel posuere. Morbi sed porta arcu, nec egestas sapien. Aliquam mollis ligula enim, at dignissim urna elementum non. Nunc facilisis convallis lacus, a feugiat quam porta vitae. Maecenas imperdiet aliquam sapien volutpat mattis. Pellentesque facilisis tempor justo eu malesuada. Nullam et sapien neque. Fusce sit amet felis ac augue mattis rhoncus. Proin est lacus, iaculis ut ipsum sed, tempor viverra odio. Vivamus quis fermentum felis. Vivamus sed arcu ullamcorper, vehicula est sodales, lacinia massa. Cras nec arcu sit amet nisi ornare rhoncus non in leo.
+                </p>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
