--- a/main.html
+++ b/main.html
@@ -27,11 +27,12 @@
     </div>
     <div class="content">
         <div class="container">
-            <h1 class="bigText textAlign">
+            <h1 class="bigText textAlign title">
                 TITRE
             </h1>
                 <div class="section-caracteristique" >
                     <div id="carouselExample" class="carousel slide">
+
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="/img/qsd.jpg" class="d-block" alt="montagne blanche">
@@ -40,6 +41,7 @@
                                 <img src="/img/ocean360.jpg" class="d-block" alt="foret">
                             </div>
                         </div>
+
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
@@ -59,10 +61,10 @@
                 <div id="carouselExample1" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/img/be0d56d0-401f-43e7-b1fa-33b08e8eb9ba.jpg" class="d-block" alt="montagne blanche">
+                            <img src="/img/be0d56d0-401f-43e7-b1fa-33b08e8eb9ba.jpg" class="d-block reverse" alt="montagne blanche">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/peau.jpg" class="d-block" alt="foret">
+                            <img src="/img/peau.jpg" class="d-block reverse" alt="foret">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1" data-bs-slide="prev">
@@ -109,10 +111,10 @@
                 <div id="carouselExample3" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/img/cover-r4x3w1200-6239adc3a7233-049-f0256784.jpgcss" class="d-block" alt="montagne blanche">
+                            <img src="/img/cover-r4x3w1200-6239adc3a7233-049-f0256784.jpg" class="d-block reverse" alt="montagne blanche">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/Circulation-oceanique_fig6c-carte-gulf-stream.jpg" class="d-block" alt="foret">
+                            <img src="/img/Circulation-oceanique_fig6c-carte-gulf-stream.jpg" class="d-block reverse" alt="foret">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample3" data-bs-slide="prev">
