SITE WEB INDEX + PODCAST

--- a/main.html
+++ b/main.html
@@ -19,8 +19,11 @@
                 <img src="/img/navLogo.png" alt="logo">
             </div>
             <div>
-                <a href="">MAIN</a>
-                <a href="">TEST</a>
+                <ul>
+                    <a href="">CookieClicker</a>
+                    <a href="">Captcha</a>
+                    <a href="">API</a>
+                </ul>
             </div>
 
         </div>
