--- a/caca 4/index.html
+++ b/caca 4/index.html
@@ -13,7 +13,7 @@
                 <a href="index.html"> <img src="img/navLogo.webp"></a>
             </div>
             <ul>
-                <a href="">CookieClicker</a>
+                <a href="../COOKIE/site.html">Taiko Clicker!</a>
                 <a href="">Captcha</a>
                 <a href="">API</a>
                 <a href="podcast.html">Podcast</a>
