--- a/caca 4/podcast.html
+++ b/caca 4/podcast.html
@@ -13,9 +13,8 @@
             <a href="index.html"> <img src="img/navLogo.webp"></a>
         </div>
         <ul>
-            <a href="">CookieClicker</a>
+            <a href="../COOKIE/site.html">Taiko Clicker!</a>
             <a href="">Captcha</a>
-            <a href="">API</a>
             <a href="podcast.html">Podcast</a>
         </ul>
     </div>
