--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <a href="index.html"> <img src="img/navLogo.webp"></a>
             </div>
             <ul>
-                <a href="../COOKIE/site.html">Taiko Clicker!</a>
+                <a href="COOKIE/site.html">Taiko Clicker!</a>
                 <a href="">Captcha</a>
-                <a href="podcast.html">Podcast</a>
+                <a href="caca 4/podcast.html">Podcast</a>
             </ul>
         </div>
     </div>
