--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
         <div class="nav">
             <div>
-                <a href="index.html"> <img src="img/navLogo.webp"></a>
+                <a href="index.html"> <img src="caca 4/img/navLogo.webp"></a>
             </div>
             <ul>
                 <a href="COOKIE/site.html">Taiko Clicker!</a>
@@ -32,16 +32,16 @@
         </div>
 
         <div class="corps-humain">
-            <img id= "diapo" src="img/cover.jpg" alt="">
+            <img id= "diapo" src="caca 4/img/cover.jpg" alt="">
 
-            <img id="corps" src="img/Corps-peau-humain.png" alt="Corps Humain" class="zoom-image">
+            <img id="corps" src="caca 4/img/Corps-peau-humain.png" alt="Corps Humain" class="zoom-image">
             <div class="right-text">
             </div>
         </div>
 
     </div>
 
-    <script src="script.js"></script>
+    <script src="caca 4/script.js"></script>
     <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
     <script src="https://files.bpcontent.cloud/2024/12/06/03/20241206031647-PGLVYXF3.js"></script>
 </body>
