--- a/caca 4/podcast.html
+++ b/caca 4/podcast.html
@@ -10,7 +10,7 @@
 <div class="header">
     <div class="nav">
         <div>
-            <a href="index.html"> <img src="img/navLogo.webp"></a>
+            <a href="../index.html"> <img src="img/navLogo.webp"></a>
         </div>
         <ul>
             <a href="../COOKIE/site.html">Taiko Clicker!</a>
