--- a/caca 4/podcast.html
+++ b/caca 4/podcast.html
@@ -14,6 +14,7 @@
         </div>
         <ul>
             <a href="../COOKIE/site.html">Taiko Clicker!</a>
+            <a href="">API</a>
             <a href="">Captcha</a>
             <a href="podcast.html">Podcast</a>
         </ul>
