--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             </div>
             <ul>
                 <a href="COOKIE/site.html">Taiko Clicker!</a>
+                <a href="">API</a>
                 <a href="">Captcha</a>
                 <a href="caca 4/podcast.html">Podcast</a>
             </ul>
