ddd final final of the finality

--- a/COOKIE/site.html
+++ b/COOKIE/site.html
@@ -19,6 +19,7 @@
   </div>
 
   <h1 class="title">Clique sur le tambour !</h1>
+  <div id="autoClickerContainer" class="auto-clicker-container"></div> <!-- Conteneur pour AutoClickers -->
 
   <img src="https://static.vecteezy.com/system/resources/previews/009/384/696/non_2x/drum-clipart-design-illustration-free-png.png" alt="Clickable" id="clickableImage" class="taiko-drum">
   <div id="counter" class="counter">0</div>
